# silverback

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  encrypt_password.py  manage.py  pyproject.toml  requirements.txt
app/backend/: settings.py  urls.py
app/templates/: base.html  home.html
backend/: settings.py
dashboard/: backends.py  forms.py  middleware.py  views.py
silverback/: asgi.py  settings.py  urls.py  wsgi.py
static/: base.css  discord.css
templates/: base.html  discord-command.html  discord.html  home.html  login.html  magic_expired.html  magic_sent.html
