[project]
name = "silverback"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "bcrypt==4.3.0",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "django==5.2.5",
    "django-widget-tweaks==1.5.0",
    "gunicorn==23.0.0",
    "idna==3.10",
    "packaging==25.0",
    "pyperclip==1.9.0",
    "python-decouple==3.8",
    "python-dotenv==1.1.0",
    "requests==2.32.4",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]
